--- a/app/index.scss
+++ b/app/index.scss
@@ -45,3 +45,7 @@ html body {
     box-sizing: content-box;
   }
 }
+
+.ag-overlay-no-rows-center {
+  margin: 0 0 16px;
+}
