--- a/app/views/ReportView/components/ProbeSummary/index.scss
+++ b/app/views/ReportView/components/ProbeSummary/index.scss
@@ -9,4 +9,16 @@
       padding: 0 16px;
     }
   }
+
+  &__test-information {
+    &-title {
+      margin: 0 0 32px 0;
+    }
+  }
+
+  &__reviews {
+    &-title {
+      margin: 0 0 32px 0;
+    }
+  }
 }
